--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Attempt at an Ai Tutor",
   "main": "index.js",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "start":"node index.js"
+
   },
   "author": "Lerai Foulkes",
   "license": "ISC",
